# amazon-omics-tools

./: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-build-workflow.yml
omics/: __init__.py
omics/analyzer/: omics-run-analyzer
omics/cli/rerun/: __main__.py
omics/cli/run_analyzer/: __init__.py  __main__.py  batch.py  timeline.py  utils.py  writeconfig.py
omics/cli/sample/: samplesheet.py
omics/common/: omics_file_types.py
omics/rerun/: omics-rerun
omics/transfer/: __init__.py  config.py  download.py  manager.py  read_set_upload.py
omics/uriparse/: uri_parse.py  uri_parser.py
omics_transfer/: __init__.py  config.py  download.py  manager.py  omicstransfer.py  utils.py
tests/: __init__.py
tests/cli/run_analyzer/unit/: test_batch.py  test_timeline.py  test_utils.py  test_writeconfig.py
tests/functional/: __init__.py  test_download.py  test_manager.py  test_omicstransfer.py
tests/omics_uri_agent/: __init__.py
tests/omics_uri_agent/unit/: test_uri_parser.py
tests/run_analyzer/unit/: test_writeconfig.py
tests/transfer/: __init__.py
tests/transfer/functional/: __init__.py  test_download.py  test_manager.py
tests/transfer/unit/: test_config.py  test_download.py  test_manager.py  test_types.py
tests/unit/: test_download.py  test_manager.py  test_omicstransfer.py
tests/uriparse/: __init__.py
tests/uriparse/unit/: test_uri_parse.py  test_uri_parser.py
