[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amazon-omics-tools"
version = "0.1.0"
description = ""
authors = ["Amazon Web Services"]
readme = "README.md"
packages = [{ include = "omics" }]

[tool.poetry.dependencies]
python = "^3.10"
s3transfer = "^0.6.0"
botocore = { file = "local-dependencies/botocore-1.29.14.tar.gz" }
mypy-boto3-omics = { path = "local-dependencies/stubs/mypy_boto3_omics_package" }

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
pytest-rerunfailures = "^10.2"
mypy-boto3-builder = "^7.11.10"
types-s3transfer = "^0.6.0.post4"
types-setuptools = "^65.4.0.0"
botocore-stubs = "^1.27.88"
bandit = "^1.7.4"
pip-audit = "^2.4.4"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    # add files to omit here
    ]
