[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amazon-omics-tools"
version = "0.8.0"
license = "Apache-2.0"
description = "Tools for working with the AWS HealthOmics Service"
repository = "https://github.com/awslabs/amazon-omics-tools"
authors = ["Amazon Web Services"]
readme = "README.md"
packages = [{ include = "omics" }]

[tool.poetry.dependencies]
python = "^3.10"
s3transfer = "^0.10.2"
boto3 = "^1.35.66"
mypy-boto3-omics = "^1.35.66"
boto3-stubs = "^1.35.66"
botocore-stubs = "^1.35.66"
docopt = "^0.6.2"
python-dateutil = "^2.8.2"
bokeh = "^3.5.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = ">=22.8,<25.0"
pytest = "^7.1.3"
mypy = "^0.981"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
pytest-rerunfailures = "^10.2"
types-s3transfer = "^0.6.0.post4"
types-setuptools = "^65.4.0.0"
types-requests = "^2.32.0.20240602"
types-python-dateutil = "^2.9.0.20240316"
types-docopt = "^0.6.11.4"
pip-audit = "^2.7.2"
idna = "3.7"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    # add files to omit here
    ]
